data/derived/sp14/progs/unify/prog3358.ml.out
Characters 95-106:
  (n mod 10 :: myList) :: digitsOfInt
                          ^^^^^^^^^^^
Error: This expression has type int -> int list list
       but an expression was expected of type int list list
